--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "sqlite3": "^5.1.6",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.1.0",
@@ -48,6 +49,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.14",
